Mobile image overlap fixed

--- a/src/components/InfoSection/faq-home.css
+++ b/src/components/InfoSection/faq-home.css
@@ -1,3 +1,10 @@
 .faq-link {
   text-decoration: none;
 }
+
+/* .about {
+  height: 50rem;
+  width: 20rem;
+  padding-bottom: 100rem;
+  color: red;
+} */
